--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,7 +5,9 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
-platform :ios, min_ios_version_supported
+$RNFirebaseAsStaticFramework = true
+
+platform :ios, '13.4'
 prepare_react_native_project!
 
 linkage = ENV['USE_FRAMEWORKS']
@@ -15,6 +17,9 @@ if linkage != nil
 end
 
 target 'media_news_app' do
+  # Firebase
+  use_frameworks! :linkage => :static
+  
   config = use_native_modules!
 
   use_react_native!(
