--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.0",
     "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/firestore": "^19.2.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "firebase": "^10.12.0",
     "react": "18.2.0",
     "react-error-boundary": "^4.0.13",
-    "react-hook-form": "^7.51.3",
+    "react-hook-form": "^7.51.4",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-keyboard-controller": "^1.11.7",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-svg": "^15.2.0"
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
