--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "clean:ios": "cd ios && rm -rf ./pods && rm -rf ./Podfile.lock && cd ../",
+    "clean:android": "cd android && ./gradlew clean && rm -rf ./build && cd ../",
+    "clean-cache": "rm -rf $TMPDIR/react-* && rm -rf $TMPDIR/metro-* && rm -rf node_modules && yarn cache clean",
+    "install-full": "yarn install && cd ./ios && pod update && pod install && cd ../"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.0",
