--- a/.gitignore
+++ b/.gitignore
@@ -56,8 +56,10 @@ yarn-error.log
 *.jsbundle
 
 # Ruby / CocoaPods
-**/Pods/
+/ios/Pods/
 /vendor/bundle/
+/ios/Podfile.lock
+/ios/tmp.xcconfig
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
